@@ -1,3 +1,4 @@
+Water tower tab: Moved ruler in front of speed and pressure toolbox
 Changed gravity label from m/s/s to m/s2
 # 0.00.61 (64362) May 25, 2012
 Flow tab: Fixed: the black dots when injected should probably always be in front of the red dots, it seems in some cases they can get covered by the red dots
